--- a/index.html
+++ b/index.html
@@ -93,11 +93,13 @@
 </head>
 
 <body>
+
 <div class="navbar-fixed">
   <nav class="transparent z-depth-0" >
     <div class="nav-wrapper blue" style="opacity:0.8">
     <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/><strong> .START</strong>™</a>
-      <ul id='nav-mobile' class="right hide-on-med-and-down">
+    <a href="#" data-activates="mobile-nav" class="button-collapse right sidenav-trigger"><i class="fas fa-bars"></i>Menu</a>
+      <ul id='nav' class="right hide-on-med-and-down">
 		  <li><a href="https://cryptotabbrowser.com/22784574" target="_blank" alt="Upgrade your Browser"><i class="fas fa-window-maximize"></i></i> BROWSE</a></li> 
       <li><a href="https://freemeteo.gr" target="_blank" alt="Check the Weather"><i class="fas fa-cloud-sun"></i> WEATHER</a></li> 
       <li><a href="http://urlz.gr/unsplash" target="_blank" alt="Find your Images"><i class="fas fa-image"></i> IMAGES</a> </li> 
@@ -109,6 +111,15 @@
 		</div>
   </nav>
 </div>
+<ul id="mobile-nav" class="side-nav hide-on-large-only" >
+  <li class="active"><a href="https://cryptotabbrowser.com/22784574" target="_blank" alt="Upgrade your Browser"><i class="fas fa-window-maximize"></i></i> BROWSE</a></li> 
+  <li><a href="https://freemeteo.gr" target="_blank" alt="Check the Weather"><i class="fas fa-cloud-sun"></i> WEATHER</a></li> 
+  <li><a href="http://urlz.gr/unsplash" target="_blank" alt="Find your Images"><i class="fas fa-image"></i> IMAGES</a> </li> 
+  <li><a href="http://urlz.gr/page/speed" target="_blank" alt="Check your Net Speed"><i class="fas fa-tachometer-alt"></i> SPEED</a></li> 
+  <li><a href="http://urlz.gr/" target="_blank" alt="Shorten your Links"><i class="fas fa-external-link-alt"></i> SHORTEN</a></li> 
+  <li><a href="http://urlz.gr/minepi" target="_blank" alt="Earn with Pi"><i class="fas fa-wallet"></i> MINE</a></li> 
+  <li><a href="https://netz.gr/" target="_blank" alt="Host your Website Free"><i class="fas fa-globe-europe"></i> HOST</a></li>
+</ul>
  
 
 <div class="content-wrapper center-wrapper">   
@@ -375,6 +386,8 @@
       }
     );
     $('select').formSelect();
+    $('.sidenav').sidenav();
+    $(".button-collapse").sideNav();
     })
   </script>
 
