--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
               <div class="col s6">
                 <a class="waves-effect waves-light modal-trigger" href="#modalHelp"
                   style="color: antiquewhite;">Instructions</a>
-                <a class="waves-effect waves-light modal-trigger" href="#modalPrivacy"
+                <a class="waves-effect waves-light modal-trigger сonfident_text" href="#modalPrivacy"
                   style="color: antiquewhite;">Terms & Privacy</a><br />
-                <a class="waves-effect waves-light modal-trigger" href="#modalContact"
+                <a class="waves-effect waves-light modal-trigger contacts_text" href="#modalContact"
                   style="color: antiquewhite;">Contact Us</a>
 
               </div>
@@ -311,7 +311,7 @@
         -->
             <div class="language">
               <h5 class="footer-heading">LANGUAGE</h5>
-              <p>Select your local language preference.</p>
+              <p class="language_select_msg">Select your local language preference.</p>
               <form class="language-form" method="POST">
                 <div class="input-field">
                   <select class="lang_selector" class=”browser-default”>
