--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <h5 class="footer-heading">LINKS</h5>
             <div class="row margin-bottom">
               <div class="col s6">
-                <a class="waves-effect waves-light modal-trigger" href="#modalHelp"
+                <a class="waves-effect waves-light modal-trigger help_text" href="#modalHelp"
                   style="color: antiquewhite;">Instructions</a>
                 <a class="waves-effect waves-light modal-trigger сonfident_text" href="#modalPrivacy"
                   style="color: antiquewhite;">Terms & Privacy</a><br />
@@ -311,7 +311,7 @@
         -->
             <div class="language">
               <h5 class="footer-heading">LANGUAGE</h5>
-              <p class="language_select_msg">Select your local language preference.</p>
+              <p class="language_select_text">Select your local language preference</p>
               <form class="language-form" method="POST">
                 <div class="input-field">
                   <select class="lang_selector" class=”browser-default”>
@@ -328,6 +328,7 @@
                     <option value="bg">Bulgarian</option>
                     <option value="he">Hebrew</option>
                     <option value="cs">Czech</option>
+                    <option value="rs">Serbian</option>
                   </select>
               </form>
             </div>
