--- a/index.html
+++ b/index.html
@@ -382,13 +382,57 @@
 
     <div id="modalHelp" class="modal fade bottom-sheet">
       <div class="modal-content">
-        <h4>Instructions</h4><br>
+        <h4>Usage Instructions</h4><br>
         1) You can add as many sites as you want, you have an example of how they will look, to delete them just go to
         the image and click on the "X".<br><br>
         2) To add your sites go to the empty box with the "+" symbol, a form will open where you can insert the URL,
         done this click on "Add", the site will appear among the tabs on the page every time you enter the site from the
         same PC.<br><br>
         *if you can't see site previews, change your IP by turning off and restarting your modem.</p>
+        <h5">Set Hellaz.Start as your Startpage</h4>
+
+        <ul class="collection">
+          <li class="collection-item avatar" style="min-height:64px;">
+            <img src="img/64-ie.png" alt="" class="circle">
+            <span class="title">Internet Explorer</span>
+            <p>
+              Microsoft
+            </p>
+            <a href="http://windows.microsoft.com/en-us/internet-explorer/change-home-page#ie=ie-11" class="btn secondary-content" target="_blank">Set your Homepage</a>
+          </li>
+          <li class="collection-item avatar" style="min-height:64px;">
+            <img src="img/64-chrome.png" alt="" class="circle">
+            <span class="title">Chrome</span>
+            <p>
+              Google Inc.
+            </p>
+            <a href="http://support.google.com/chrome/bin/answer.py?hl=en&amp;answer=95314" class="btn secondary-content" target="_blank">Set your Homepage</a>
+          </li>
+          <li class="collection-item avatar" style="min-height:64px;">
+            <img src="img/64-safari.png" alt="" class="circle">
+            <span class="title">Safari</span>
+            <p>
+              Apple Inc.
+            </p>
+            <a href="https://support.apple.com/guide/safari/change-your-homepage-ibrw1020/14.0/mac/11.0" class="btn secondary-content" target="_blank">Set your Homepage</a>
+          </li>
+          <li class="collection-item avatar" style="min-height:64px;">
+            <img src="img/64-firefox.png" alt="" class="circle">
+            <span class="title">Firefox</span>
+            <p>
+              Mozilla Foundation
+            </p>
+            <a href="http://support.mozilla.org/en-US/kb/How%20to%20set%20the%20home%20page#w_set-a-single-web-site-as-your-home-page" class="btn secondary-content" target="_blank">Set your Homepage</a>
+          </li>
+          <li class="collection-item avatar" style="min-height:64px;">
+            <img src="img/64-opera.png" alt="" class="circle">
+            <span class="title">Opera Browser</span>
+            <p>
+              Opera Software
+            </p>
+            <a href="https://help.opera.com/en/latest/start-page/" class="btn secondary-content" target="_blank">Set your Homepage</a>
+          </li>
+        </ul>
       </div>
       <div class="modal-footer">
         <a href="#!" class="modal-close waves-effect waves-red btn">OK</a>
