--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
         done this click on "Add", the site will appear among the tabs on the page every time you enter the site from the
         same PC.<br><br>
         *if you can't see site previews, change your IP by turning off and restarting your modem.</p>
-        <h5">Set Hellaz.Start as your Startpage</h4>
+        <h4>Set Hellaz.Start as your Startpage</h4>
 
         <ul class="collection">
           <li class="collection-item avatar" style="min-height:64px;">
