--- a/index.html
+++ b/index.html
@@ -383,12 +383,14 @@
     <div id="modalHelp" class="modal fade bottom-sheet">
       <div class="modal-content">
         <h4>Usage Instructions</h4><br>
-        1) You can add as many sites as you want, you have an example of how they will look, to delete them just go to
-        the image and click on the "X".<br><br>
-        2) To add your sites go to the empty box with the "+" symbol, a form will open where you can insert the URL,
+        <ul>
+        <li>1) You can add as many sites as you want, you have an example of how they will look, to delete them just go to
+        the image and click on the "X".<br><br></li>
+        <li>2) To add your sites go to the empty box with the "+" symbol, a form will open where you can insert the URL,
         done this click on "Add", the site will appear among the tabs on the page every time you enter the site from the
-        same PC.<br><br>
-        *if you can't see site previews, change your IP by turning off and restarting your modem.</p>
+        same PC.<br><br></li>
+        </ul>
+        *if you can't see site previews, change your IP by turning off and restarting your router.</p>
         <h4>Set Hellaz.Start as your Startpage</h4>
 
         <ul class="collection">
