--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 <a class="waves-effect waves-light modal-trigger сonfident_text" href="#modalPrivacy"
                   style="color: antiquewhite;">Terms & Privacy</a><br />
                 <a class="waves-effect waves-light modal-trigger contacts_text" href="#modalContact"
-                  style="color: antiquewhite;">Contact Us</a>
+                  style="color: antiquewhite;">Contact</a>
 
               </div>
             </div>
