--- a/index.html
+++ b/index.html
@@ -284,11 +284,11 @@
             <div class="row margin-bottom">
               <div class="col s6">
                 <a class="waves-effect waves-light modal-trigger help_text" href="#modalHelp"
-                  style="color: antiquewhite;">Instructions</a>
+                  style="color: antiquewhite;">Instructions</a><br/>
                 <a class="waves-effect waves-light modal-trigger сonfident_text" href="#modalPrivacy"
-                  style="color: antiquewhite;">Terms & Privacy</a><br />
-                <a class="waves-effect waves-light modal-trigger contacts_text" href="#modalContact"
-                  style="color: antiquewhite;">Contact</a>
+                  style="color: antiquewhite;">Terms & Privacy</a><br/>
+                <a class="waves-effect waves-light modal-trigger contactus_text" href="#modalContact"
+                  style="color: antiquewhite;">Contact</a><br/>
 
               </div>
             </div>
