--- a/index.html
+++ b/index.html
@@ -136,19 +136,20 @@
 
   <!-- Menu that will be shown on small devices -->
   <ul class="sidenav" id="menu-responsive">
-    <li class="active"><a href="https://cryptotabbrowser.com/22784574" target="_blank" alt="Upgrade your Browser"><i
-          class="fas fa-window-maximize"></i></i> BROWSE</a></li>
-    <li><a href="https://freemeteo.gr" target="_blank" alt="Check the Weather"><i class="fas fa-cloud-sun"></i>
-        WEATHER</a></li>
-    <li><a href="http://urlz.gr/unsplash" target="_blank" alt="Find your Images"><i class="fas fa-image"></i> IMAGES</a>
-    </li>
-    <li><a href="http://urlz.gr/page/speed" target="_blank" alt="Check your Net Speed"><i
-          class="fas fa-tachometer-alt"></i> SPEED</a></li>
-    <li><a href="http://urlz.gr/" target="_blank" alt="Shorten your Links"><i class="fas fa-external-link-alt"></i>
-        SHORTEN</a></li>
-    <li><a href="http://urlz.gr/minepi" target="_blank" alt="Earn with Pi"><i class="fas fa-wallet"></i> MINE</a></li>
-    <li><a href="https://netz.gr/" target="_blank" alt="Host your Website Free"><i class="fas fa-globe-europe"></i>
-        HOST</a></li>
+    <li class="active"><a href="https://cryptotabbrowser.com/22784574" target="_blank" alt="Upgrade your Browser">
+      <i class="fas fa-window-maximize"></i> BROWSE</a></li>
+    <li><a href="https://freemeteo.gr" target="_blank" alt="Check the Weather">
+      <i class="fas fa-cloud-sun"></i> WEATHER</a></li>
+    <li><a href="http://urlz.gr/unsplash" target="_blank" alt="Find your Images" class="images">
+      <i class="fas fa-image"></i> IMAGES</a></li>
+    <li><a href="http://urlz.gr/page/speed" target="_blank" alt="Check your Net Speed">
+      <i class="fas fa-tachometer-alt"></i> SPEED</a></li>
+    <li><a href="http://urlz.gr/" target="_blank" alt="Shorten your Links">
+      <i class="fas fa-external-link-alt"></i> SHORTEN</a></li>
+    <li><a href="http://urlz.gr/minepi" target="_blank" alt="Earn with Pi">
+      <i class="fas fa-wallet"></i> MINE</a></li>
+    <li><a href="https://netz.gr/" target="_blank" alt="Host your Website Free">
+      <i class="fas fa-globe-europe"></i> HOST</a></li>
   </ul>
 
 
@@ -208,7 +209,7 @@
                     placeholder="Enter site address"></div>
               </form>
             </div>
-            <p class="heading popupar_heading">Popular Sites</p>
+            <p class="heading popular_heading">Popular Sites</p>
             <div class="grid-wrapper">
               <div class="grid" id="popularSites">
 
@@ -271,11 +272,11 @@
           <div class="col m12 l4">
             <!-- COLUMN 1 -->
             <h5 class="footer-heading"><i class="fas fa-flag-checkered"></i> Hellaz.Start v2</h5>
-            <p>This is a simple startpage that is easy to use and customize. It is fully responsive CSS and HTML, and
+            <p class="aboutus">This is a simple startpage that is easy to use and customize. It is fully responsive CSS and HTML, and
               all data is stored in your browser cookies. Feel free to add your links and bookmarks.</p>
             <br>
-            <strong>This page works thanks to the data saved on your PC, if you clean your Browser from Cookies you
-              could delete all the saved sites, what you see here is not online and is not shared.</strong>
+            <p class="warning">This page works thanks to the data saved on your PC, if you clean your Browser from Cookies you
+              could delete all the saved sites, what you see here is not online and is not shared.</p>
             <!-- END COLUMN 1 -->
           </div>
           <div class="col m6 l4">
