--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
 
     gtag('config', 'UA-37136714-3');
   </script>
-  <script data-ad-client="ca-pub-3269987799484354" async
-    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script data-ad-client="ca-pub-3269987799484354" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
