--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
           </div>
           <div class="col m6 l4">
             <!-- COLUMN 2 -->
-            <h5 class="footer-heading">LINKS</h5>
+            <h5 class="footer-heading links">LINKS</h5>
             <div class="row margin-bottom">
               <div class="col s6">
                 <a class="waves-effect waves-light modal-trigger help_text" href="#modalHelp"
