--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <noscript>
     <link rel="stylesheet" href="css/style.1.0.2.css">
   </noscript>
-  <!--<link rel="stylesheet" href="css/style.1.0.2.css"> -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/f9a823940e.js" crossorigin="anonymous"></script>
   <!--[if lt IE 9]>
@@ -149,6 +148,8 @@
       <i class="fas fa-wallet"></i> MINE</a></li>
     <li><a href="https://netz.gr/" target="_blank" alt="Host your Website Free">
       <i class="fas fa-globe-europe"></i> HOST</a></li>
+    <li><a href="https://travel.hellaz.net/" target="_blank" alt="Plan your Travel Flights & Accomodation now">
+      <i class="fas fa-plane-departure"></i> TRAVEL</a></li>
   </ul>
 
 
