--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
           </li>
           <li><a href="https://netz.gr/" target="_blank" alt="Host your Website Free"><i
                 class="fas fa-globe-europe"></i> HOST</a></li>
+          <li><a href="https://travel.hellaz.net/" target="_blank" alt="Plan your Travel Flights & Accomodation now">
+      <i class="fas fa-plane-departure"></i> TRAVEL</a></li>
         </ul>
 
       </div>
