--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             .START</strong>™</a>
         <a href="#" data-target="menu-responsive" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li style="font-size=12px;"><a href="https://cryptotabbrowser.com/22784574" target="_blank" alt="Upgrade your Browser"><i
+          <li style="font-size:12px;"><a href="https://cryptotabbrowser.com/22784574" target="_blank" alt="Upgrade your Browser"><i
                 class="fas fa-window-maximize"></i> BROWSE</a></li>
           <li><a href="https://freemeteo.gr" target="_blank" alt="Check the Weather"><i class="fas fa-cloud-sun"></i>
               WEATHER</a></li>
