--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
     
 
 </script>
-<!--<script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>-->
+<script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
 </body>
 
 </html>
