--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
   <meta name="description" content="Custom Homepage where you can save all your Favorite Websites.">
   <meta name="keywords" content="homepage,startpage,new tab,browser home, .gr">
+  <meta name="wot-verification" content="584ba9caa046b120a515"/>
+
   <title>Hellaz.Start</title>
   <meta property="og:image" content="image.png" />
   <!-- CSS  -->
