--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
 
-  <meta name="description" content="Custom Homepage where you can save all your Favorite Websites.">
+  <meta name="description" content="Hellaz.Start - A Custom StartPage to bring your Homepage to life with all your Favorite Websites.">
   <meta name="keywords" content="homepage,startpage,new tab,browser home, .gr">
   <meta name="wot-verification" content="584ba9caa046b120a515"/>
-
   <title>Hellaz.Start</title>
   <meta property="og:image" content="image.png" />
   <!-- CSS  -->
