--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
 
   <meta name="description" content="Hellaz.Start - A Custom StartPage to bring your Homepage to life with all your Favorite Websites.">
-  <meta name="keywords" content="homepage,startpage,new tab,browser home, .gr">
+  <meta name="keywords" content="homepage,startpage,new tab,browser,home, en, el, pl, rs, ar, in, ru, es, fr">
   <meta name="wot-verification" content="584ba9caa046b120a515"/>
   <title>Hellaz.Start</title>
   <meta property="og:image" content="image.png" />
