--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Hellaz.Start - A Custom StartPage to bring your Homepage to life with all your Favorite Websites.">
   <meta name="keywords" content="homepage,startpage,new tab,browser,home, en, el, pl, rs, ar, in, ru, es, fr">
   <meta name="wot-verification" content="94901ba3d487d91eb5b4"/>
+  <meta name="msvalidate.01" content="DC03BC1A9B216EDF51AA024F748C5C20" />
 
   <title>Hellaz.Start</title>
   <meta property="og:image" content="image.png" />
