--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="wot-verification" content="94901ba3d487d91eb5b4"/>
   <meta name="msvalidate.01" content="DC03BC1A9B216EDF51AA024F748C5C20" />
 
-  <title>Hellaz.Start</title>
+  <title>Hellaz.Start - Refresh your Browser Home Page today</title>
   <meta property="og:image" content="image.png" />
   <!-- CSS  -->
   <link rel="icon" type="image/png" href="img/favicon.ico">
