--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
   <meta property="og:image" content="image.png" />
   <!-- CSS  -->
   <link rel="icon" type="image/png" href="img/favicon.ico">
+
   <link rel="preload" href="css/style.1.0.2.css" as="style" onload="this.rel='stylesheet'">
+  <!-- Compiled and minified CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
   <noscript>
     <link rel="stylesheet" href="css/style.1.0.2.css">
   </noscript>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+ 
   <script src="https://kit.fontawesome.com/f9a823940e.js" crossorigin="anonymous"></script>
   <!--[if lt IE 9]>
     <link rel="stylesheet" href="css/style_ie.1.0.2.css">
@@ -39,8 +43,7 @@
 
   <!-- scripts.end -->
 
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
 
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -107,12 +110,11 @@
 </head>
 
 <body>
-
   <div class="navbar-fixed">
     <nav class="transparent z-depth-0">
       <div class="nav-wrapper blue" style="opacity:0.8">
-        <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px' /><strong>
-            .START</strong>™</a>
+        <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px' />
+            .START</>™</a>
         <a href="#" data-target="menu-responsive" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li style="font-size:12px;"><a href="https://cryptotabbrowser.com/22784574" target="_blank" alt="Upgrade your Browser"><i
@@ -132,7 +134,6 @@
           <li><a href="https://travel.hellaz.net/" target="_blank" alt="Plan your Travel Flights & Accomodation now">
       <i class="fas fa-plane-departure"></i> TRAVEL</a></li>
         </ul>
-
       </div>
     </nav>
   </div>
