--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           </li>
           <li><a href="https://netz.gr/" target="_blank" alt="Host your Website Free"><i
                 class="fas fa-globe-europe"></i> HOST</a></li>
-          <li><a href="https://travel.hellaz.net/" target="_blank" alt="Plan your Travel Flights & Accomodation now">
+          <li><a href="https://travel.hellaz.net/" target="_blank" alt="Plan your Travel Flights &amp; Accomodation now">
       <i class="fas fa-plane-departure"></i> TRAVEL</a></li>
         </ul>
       </div>
@@ -155,7 +155,7 @@
       <i class="fas fa-wallet"></i> MINE</a></li>
     <li><a href="https://netz.gr/" target="_blank" alt="Host your Website Free">
       <i class="fas fa-globe-europe"></i> HOST</a></li>
-    <li><a href="https://travel.hellaz.net/" target="_blank" alt="Plan your Travel Flights & Accomodation now">
+    <li><a href="https://travel.hellaz.net/" target="_blank" alt="Plan your Travel Flights &amp; Accomodation now">
       <i class="fas fa-plane-departure"></i> TRAVEL</a></li>
   </ul>
 
@@ -294,7 +294,7 @@
                 <a class="waves-effect waves-light modal-trigger help_text" href="#modalHelp"
                   style="color: antiquewhite;">Instructions</a><br/>
                 <a class="waves-effect waves-light modal-trigger сonfident_text" href="#modalPrivacy"
-                  style="color: antiquewhite;">Terms & Privacy</a><br/>
+                  style="color: antiquewhite;">Terms &amp; Privacy</a><br/>
                 <a class="waves-effect waves-light modal-trigger contactus_text" href="#modalContact"
                   style="color: antiquewhite;">Contact</a><br/>
 
@@ -451,7 +451,7 @@
     <!--Privacy Modal-->
     <div id="modalPrivacy" class="modal fade bottom-sheet">
       <div class="modal-content">
-        <h4>Privacy & Terms</h4>
+        <h4>Privacy &amp; Terms</h4>
         <p>Our website uses cookies and similar technologies to ensure the proper functioning of procedures and improve
           the experience of using online applications. This web page works based on the browser data saved on your PC in
           the form of cookies. If you clean your Browser from Cookies you could delete all the saved sites, what you see
