--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <div class="grid-wrapper">
         <div class="search-bar">
           <script async src="https://cse.google.com/cse.js?cx=partner-pub-3269987799484354:ze47nf-rzpu"></script>
-          <form id="search_form" action="https://www.encrypted.google.com/search" method="get" target="_top">
+          <form id="search_form" action="https://search.hellaz.eu" method="get" target="_top">
             <input type="text" name="q" class="input" autocomplete="on" placeholder="Search the Web"
               class="gcse-searchbox-only">
             <button type="submit" class="search-bar__submit"><span class="search-bar__submit-ico"></span></button>
