--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <button type="submit" class="search-bar__submit"><span class="search-bar__submit-ico"></span></button>
 
             <button type="button" class="search-dropdown__trigger"><span
-                class="search-dropdown__ico search-dropdown__ico_google"></span></button>
+                class="search-dropdown__ico search-dropdown__ico_hellaz"></span></button>
             <ul class="search-dropdown__list">
               <li class="search-dropdown__item"><span
                   class="search-dropdown__ico search-dropdown__ico_google"></span>Google
@@ -184,6 +184,9 @@
               </li>
               <li class="search-dropdown__item"><span
                   class="search-dropdown__ico search-dropdown__ico_yahoo "></span>Yahoo
+              </li>
+             <li class="search-dropdown__item"><span
+                  class="search-dropdown__ico search-dropdown__ico_presearch"></span>Presearch
               </li>
               <li class="search-dropdown__item"><span
                   class="search-dropdown__ico search-dropdown__ico_yandex"></span>Yandex
