--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
           <div class="col s12 m4">
             <div class="card white-blue" style="opacity: 0.7;">
               <div class="card-content white-text center">
-                <a href="http://Books.Hellaz.EU">Books Online</a>
+                <a href="https://news.hellaz.eu/">Hellaz.News Main</a>
               </div>
             </div>
-            <div id="rss-books"
+            <div id="rss-news"
               style="display: block; padding-top: 0px; margin-top: 0px; padding-bottom: 0px; margin-bottom: 10px; color: gray;">
             </div>
           </div>
@@ -256,21 +256,21 @@
           <div class="col s12 m4">
             <div class="card white-blue" style="opacity: 0.7;">
               <div class="card-content white-text center">
-                <a href="http://Movies.Hellaz.EU">Movies Online</a>
+                <a href="http://news.hellaz.eu/">Hellaz.News Greece</a>
               </div>
             </div>
-            <div id="rss-movies"
+            <div id="rss-greece"
               style="display: block; padding-top: 0px; margin-top: 0px; padding-bottom: 0px; margin-bottom: 0px; color: gray;">
             </div>
           </div>
           <div class="col s12 m4">
             <div class="card white-blue" style="opacity: 0.7;">
               <div class="card-content white-text center">
-                <a href="http://Scripts.Hellaz.EU">Scripts Online</a>
+                <a href="http://news.hellaz.eu">Hellaz.News Sports</a>
               </div>
             </div>
-            <div id="rss-scripts"
-              style="display: block; padding-top: 0px; margin-top: 0px; padding-bottom: 0px; margin-bottom: 0px; color: gray;">
+            <div id="rss-sports"
+              style="display: block; padding-top: 0px; margin-top: 0px; padding-bottom: 0px; margin-bottom: 0px; color: gray; font-size= 12px;">
             </div>
           </div>
         </div>
