--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
 
   <meta name="description" content="Hellaz.Start - A Custom StartPage to bring your Homepage to life with all your Favorite Websites.">
-  <meta name="keywords" content="homepage,startpage,new tab,browser,home, en, el, pl, rs, ar, in, ru, es, fr">
+  <meta name="keywords" content="homepage, startpage, new tab, browser, home, en, el, pl, rs, ar, in, ru, es, fr, hellaz, news, site, hellaz.eu, hellaz.net, search, αρχική, εκκίνηση">
   <meta name="wot-verification" content="94901ba3d487d91eb5b4"/>
   <meta name="msvalidate.01" content="DC03BC1A9B216EDF51AA024F748C5C20" />
 
