--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
       </div>
       <div class="footer-copyright">
         <div class="container">&copy; 2021 Hellaz.Start
-          <a class="grey-text text-lighten-4 right" href="https://hellaz.net">Brought to you by Hellaz.Team</a>
+          <a class="grey-text text-lighten-4 right" href="https://hellaz.eu">Brought to you by Hellaz.Team</a>
         </div>
       </div>
     </footer>
@@ -450,7 +450,7 @@
         </ul>
       </div>
       <div class="modal-footer">
-        <a href="#!" class="modal-close waves-effect waves-red btn">OK</a>
+        <a href="https://search.netz.gr/" target="_blank" class="modal-close waves-effect waves-red btn">OK</a>
       </div>
     </div>
     <!--Privacy Modal-->
@@ -467,7 +467,7 @@
       </div>
       <div class="modal-footer">
         <a href="#!" class="modal-close waves-effect waves-green btn">Agree</a>
-        <a href="https://cryptotabbrowser.com/landing/57/22403981"
+        <a href="https://cryptobrowser.netz.gr/" target="_blank"
           class="modal-action modal-close btn red darken-1">Disagree</a>
 
       </div>
@@ -501,8 +501,8 @@
           <div class="modal-footer">
             <button type="button" class="modal-close waves-effect waves-blue btn btn-outline-light ml-sm-2"
               style="border-radius: 50px; width:100%;" data-dismiss="modal" aria-label="Close">Submit</button>
-            <a href="https://cryptotabbrowser.com/landing/57/22403981"
-              class="modal-action modal-close btn red darken-1">Cancel</a>
+            <a href="http://cryptotab.netz.gr" target="_blank"
+              class="modal-action modal-close btn red darken-1" alt="Ακύρωση" >Cancel</a>
 
           </div>
         </div>
