--- a/index.html
+++ b/index.html
@@ -191,6 +191,9 @@
               <li class="search-dropdown__item"><span
                   class="search-dropdown__ico search-dropdown__ico_yandex"></span>Yandex
               </li>
+              <li class="search-dropdown__item"><span
+                  class="search-dropdown__ico search-dropdown__ico_netz"></span>NetZ.gr
+              </li>
             </ul>
 
             <div id="autocomplete" class="gcse-searchbox-only"></div>
