--- a/index.html
+++ b/index.html
@@ -223,18 +223,12 @@ label {
       <!-- You can include HTML instead of a background image using .slide__html -->
     </div>
     <div class="slide__content">
-      <h1>Slideshow Concept V2 (No JS)</h1>
+      <h1>Hellaz Team</h1>
       <p>A pure CSS and HTML slideshow concept.</p>
-      <p>To add or remove slides:</p>
-      <ul>
-        <li>Add a new slide template and label in the HTML</li>
-        <li>Update the <code>$slide-count</code> SCSS variable</li>
-        <li>Tab colours: Update the <code>$c-slides</code> SCSS variable</li>
-        <li>Slide popout images: Update the <code>$b-slides</code> SCSS variable</li>
-      </ul>
-      <p>Use the tabs below to change slide</p>
-      <p><strong style="color: #0F0">NEW:</strong> Arrow keys work too after your first selection.</p>
-      <p>Et voila.</p>
+      <p>A digital-first creative and innovative agency with specialization in development of web applications, born in Hellas.</p>
+      <p>We have built and keep on building unique applications for our clients all over the world. </p>
+      
+      
     </div>
   </div>
 
@@ -242,8 +236,8 @@ label {
   <input type="radio" id="slideCheckbox2" name="slide"></input>
   <div class="slide">
     <div class="slide__content">
-      <h1>More</h1>
-      <p>More here</p>
+      <h1>Excellence</h1>
+      <p>We focus on users experience, quality, scalability and ease-of-use. We deliver the Simple solutions to your needs.</p>
     </div>
   </div>
 
@@ -251,8 +245,8 @@ label {
   <input type="radio" id="slideCheckbox3" name="slide"></input>
   <div class="slide">
     <div class="slide__content">
-      <h1>Yet More</h1>
-      <p>Yet more here</p>
+      <h1>Localization</h1>
+      <p>Globalization to Localization</p>
     </div>
   </div>
 
@@ -260,8 +254,8 @@ label {
   <input type="radio" id="slideCheckbox4" name="slide"></input>
   <div class="slide">
     <div class="slide__content">
-      <h1>Zzz</h1>
-      <p>Yada yada</p>
+      <h1>Loyalty</h1>
+      <p>Customer needs</p>
     </div>
   </div>
 
@@ -269,7 +263,7 @@ label {
   <input type="radio" id="slideCheckbox5" name="slide"></input>
   <div class="slide">
     <div class="slide__content">
-      <h1>The end</h1>
+      <h1>Authentic</h1>
       <p>It's over</p>
     </div>
   </div>
@@ -280,8 +274,8 @@ label {
   <input type="radio" id="slideCheckbox6" name="slide"></input>
   <div class="slide">
     <div class="slide__content">
-      <h1>The end</h1>
-      <p>It's over</p>
+      <h1>Zero to Hero</h1>
+      <p>In the Zone, Zooming in on you, With Zest</p>
     </div>
   </div>
 
@@ -289,7 +283,8 @@ label {
   <input type="radio" id="slideCheckbox7" name="slide"></input>
   <div class="slide">
     <div class="slide__content">
-      <h1>The end</h1>
+      <h1>TEAM</h1>
+      <p>Et voila.</p>
       <p>It's over</p>
     </div>
   </div>
