--- a/index.html
+++ b/index.html
@@ -1,217 +1,65 @@
-<html>
+<html lang="en">
+
 <head>
-  <style>
-// Number of slides
-$slide-count: 7;
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
 
-// Tab colours (must be same as number of slides)
-$c-slides: #2e112d #540032 #820333 #c9283e #f0433a #f033aa #336699;
+  <meta name="description" content="Hellaz.Team.">
+  <meta name="keywords" content="hellaz.eu, hellaz.net, search, αρχική, εκκίνηση">
+  <meta name="wot-verification" content="94901ba3d487d91eb5b4"/>
+  <meta name="msvalidate.01" content="DC03BC1A9B216EDF51AA024F748C5C20" />
 
-// Slide backgrounds (if used, must be same as number of slides, otherwise false)
-$b-slides: url("https://via.placeholder.com/1000x2000/2E112D/fff?text=1")
-  url("https://via.placeholder.com/1000x2000/540032/fff?text=2")
-  url("https://via.placeholder.com/1000x2000/820333/fff?text=3")
-  url("https://via.placeholder.com/1000x2000/C9283E/fff?text=4")
-  url("https://via.placeholder.com/1000x2000/F0433A/fff?text=5")
-  url("https://via.placeholder.com/1000x2000/F033AA/fff?text=6")
-  url("https://via.placeholder.com/1000x2000/F033AA/fff?text=7");
-// $b-slides: false;
+  <title>Hellaz.Team - Ξεκινώντας Σωστά!</title>
+  <meta property="og:image" content="image.png" />
+  <!-- CSS  -->
+  <link rel="icon" type="image/png" href="start/img/favicon.ico">
 
-// Total duration of slide animation
-$animation-duration: 1s;
+  <link rel="preload" href="style.css" as="style" onload="this.rel='stylesheet'">
+  <!-- Compiled and minified CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+  <noscript>
+    <link rel="stylesheet" href="style.css">
+  </noscript>
+ 
+  <script src="https://kit.fontawesome.com/f9a823940e.js" crossorigin="anonymous"></script>
+  <!--[if lt IE 9]>
+    <link rel="stylesheet" href="css/style_ie.1.0.2.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
-// Dimensions of the slides
-$slide-width: 50%;
-$slide-height: 100%;
+  <!-- JS -->
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-rss/4.3.0/jquery.rss.min.js" ></script>
 
-// Slide content overflow (auto or hidden)
-$slide-overflow: auto;
+  <!-- scripts -->
 
-// Slide content colours
-$c-black: #000;
-$c-grey: #aaa;
-$c-light-grey: #ddd;
+  <script src="js/init.js"></script>
+  <script src="js/localized.1.0.3.js"></script>
+  <script src="js/main.1.0.7.js"></script>
 
-// Other colours
-$c-background: #101010;
-$c-text: $c-light-grey;
-$c-label-text: $c-grey;
+  <!-- scripts.end -->
 
-/****************************************/
 
-html,
-body {
-  margin: 0;
-  background-color: $c-background;
-  font-family: sans-serif;
-}
 
-.slideshow {
-  width: 100%;
-  height: 100%;
-  border: 0px;
-  padding: 0px;
-  margin: 0 auto;
-  background-color: $c-black;
-  overflow: hidden;
-  counter-reset: slide;
-}
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-input {
-  position: absolute;
-  opacity: 0;
-  top: -25px;
-  counter-increment: slide;
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-37136714-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  &:checked + .slide {
-    transform: translateX(0px);
-    transition: transform #{$animation-duration / 2} ease-in-out;
-
-    .slide__content {
-      width: 100%;
-      display: block;
-
-      &:before {
-        color: #fff;
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        content: counter(slide) " of #{$slide-count}";
-        padding: 5px 10px;
-        background-color: rgba(255, 255, 255, 0.1);
-        border-radius: 4px;
-        text-align: right;
-      }
-    }
-  }
-
-  @for $i from 1 through $slide-count {
-    &:checked:nth-of-type(#{$i}) ~ nav label:nth-child(#{$i}) {
-      color: white;
-    }
-  }
-}
-
-@mixin slide-popout {
-  position: absolute;
-  margin: auto;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-}
-
-.slide {
-  transform: translateX(#{-$slide-width * 2});
-  position: absolute;
-  width: $slide-width;
-  height: $slide-height;
-  background-size: $slide-width $slide-height;
-  transition: transform #{$animation-duration / 2} ease-in-out;
-
-  &__content {
-    box-sizing: border-box;
-    height: 100%;
-    overflow: $slide-overflow;
-    padding: 50px;
-    color: $c-text;
-    position: absolute;
-    left: 100%;
-    display: none;
-    animation-name: fade-in;
-    animation-duration: $animation-duration;
-    animation-iteration-count: 1;
-    opacity: 1;
-  }
-
-  @if $b-slides {
-    $i: 2;
-    @each $slide in $b-slides {
-      &__html {
-        display: none;
-      }
-
-      &:nth-child(#{$i}) {
-        background: $slide;
-        background-repeat: no-repeat;
-        background-size: 100%;
-        background-position: center;
-
-        &:after {
-          @include slide-popout;
-        }
-      }
-      $i: $i + 2;
-    }
-  } @else {
-    &__html {
-      @include slide-popout;
-    }
-  }
-}
-
-nav {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 50%;
-  height: 60px;
-  overflow: auto;
-  background-size: 100%;
-  height: 60px;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), $c-background 10%);
-}
-
-label {
-  box-sizing: border-box;
-  color: $c-label-text;
-  font-weight: bold;
-  display: block;
-  width: calc((100% / #{$slide-count}) - 2%);
-  margin: 5px 1% 5px 1%;
-  height: 50px;
-  line-height: 50px;
-  border-bottom: solid 4px $c-grey;
-  text-align: center;
-  float: left;
-  text-transform: uppercase;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-
-  &:hover {
-    cursor: pointer;
-    color: #fff;
-    border-bottom: solid 4px #fff;
-  }
-
-  $i: 1;
-  @each $slide in $c-slides {
-    &:nth-child(#{($i)}) {
-      left: calc(50% + (#{$i - 1} * (50% / #{$slide-count})));
-      border-bottom-color: $slide;
-    }
-    $i: $i + 1;
-  }
-}
-
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    transform: translateY(-50px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0px);
-    opacity: 1;
-  }
-}
-
-  </style>
+    gtag('config', 'UA-37136714-3');
+  </script>
+  <script data-ad-client="ca-pub-3269987799484354" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3269987799484354"
+     crossorigin="anonymous"></script>
 </head>
   <body>
    <fieldset class="slideshow">
