--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
   <link rel="icon" type="image/png" href="start/img/favicon.ico">
 
   <link rel="preload" href="style.css" as="style" onload="this.rel='stylesheet'">
-  <!-- Compiled and minified CSS -->
+  <!-- Compiled and minified CSS
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+  -->
   <noscript>
     <link rel="stylesheet" href="style.css">
   </noscript>
