--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <!-- CSS  -->
   <link rel="icon" type="image/png" href="start/img/favicon.ico">
 
-  <link  href="style.css" as="style" onload="this.rel='stylesheet'">
-  <!-- Compiled and minified CSS
+  <link href="style.css" as="style" onload="this.rel='stylesheet'">
+  <!-- Compiled and minified CSS -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-  -->
+
   <noscript>
     <link rel="stylesheet" href="style.css">
   </noscript>
@@ -49,7 +49,6 @@
     </div>
     <div class="slide__content">
       <h1>Hellaz Team</h1>
-      <p>A pure CSS and HTML slideshow concept.</p>
       <p>A digital-first creative and innovative agency with specialization in development of web applications, born in Hellas.</p>
       <p>We have built and keep on building unique applications for our clients all over the world. </p>
       
