--- a/start/index.html
+++ b/start/index.html
@@ -5,12 +5,12 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
 
-  <meta name="description" content="Hellaz.Start - A Custom StartPage to bring your Homepage to life with all your Favorite Websites.">
+  <meta name="description" content="Hellaz.Start - A Hellaz StartPage to bring your Homepage to life with all your Favorite Websites.">
   <meta name="keywords" content="homepage, startpage, new tab, browser, home, en, el, pl, rs, ar, in, ru, es, fr, hellaz, news, site, hellaz.eu, hellaz.net, search, αρχική, εκκίνηση">
   <meta name="wot-verification" content="94901ba3d487d91eb5b4"/>
   <meta name="msvalidate.01" content="DC03BC1A9B216EDF51AA024F748C5C20" />
 
-  <title>Hellaz.Start - Αναζωογονείστε την περιήγηση σας! Ξεκινώντας Σωστά!</title>
+  <title>Hellaz.Start - Αναζωογονήστε την περιήγηση σας! Ξεκινώντας Σωστά!</title>
   <meta property="og:image" content="image.png" />
   <!-- CSS  -->
   <link rel="icon" type="image/png" href="img/favicon.ico">
