--- a/start/index.html
+++ b/start/index.html
@@ -248,7 +248,7 @@
           <div class="col s12 m4">
             <div class="card white-blue" style="opacity: 0.7;">
               <div class="card-content white-text center">
-                <a href="https://news.hellaz.eu/">Hellaz.News Main</a>
+                <a href="https://news.hellaz.gr/">Hellaz.News Greece</a>
               </div>
             </div>
             <div id="rss-news"
@@ -259,7 +259,7 @@
           <div class="col s12 m4">
             <div class="card white-blue" style="opacity: 0.7;">
               <div class="card-content white-text center">
-                <a href="http://news.hellaz.eu/">Hellaz.News Greece</a>
+                <a href="http://news.hellaz.gr/">Hellaz.News World</a>
               </div>
             </div>
             <div id="rss-greece"
@@ -269,7 +269,7 @@
           <div class="col s12 m4">
             <div class="card white-blue" style="opacity: 0.7;">
               <div class="card-content white-text center">
-                <a href="http://news.hellaz.eu">Hellaz.News Sports</a>
+                <a href="http://news.hellaz.gr">Hellaz.News Sports</a>
               </div>
             </div>
             <div id="rss-sports"
