--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
 
   <meta name="description" content="Hellaz.Team.">
-  <meta name="keywords" content="hellaz.eu, hellaz.net, search, αρχική, εκκίνηση">
+  <meta name="keywords" content="hellaz.eu, hellaz.gr hellaz.net, search, αρχική, εκκίνηση">
   <meta name="wot-verification" content="94901ba3d487d91eb5b4"/>
   <meta name="msvalidate.01" content="DC03BC1A9B216EDF51AA024F748C5C20" />
 
