--- a/start/privacy.html
+++ b/start/privacy.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Privacy Policy</title>
+<title>Hellaz.Start Privacy Policy</title>
 	<meta http-equiv="refresh" content="3;URL=https://urlz.gr">
 </head>
 <body><center>
